--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11030,3 +11030,10 @@ html {
     outline: none;
     box-shadow: none;
 }
+
+.ui-autocomplete-category {
+    font-weight: bold;
+    padding: .2em .4em;
+    margin: .8em 0 .2em;
+    line-height: 1.5;
+  }
