--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Цифровой прорыв 2023</a>
+                <a class="navbar-brand" href="/">Цифровой прорыв 2023</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -86,7 +86,7 @@
 
                     <article class="search-result row">
                         <div class="col-xs-12 col-sm-12 col-md-3">
-                            <a href="video['video_url']" title="Lorem ipsum" class="thumbnail" target="_blank">
+                            <a href="{{video['video_url']}}" title="{{video['title']}}" class="thumbnail" target="_blank">
                                 <img src="{{video['thumbnail_url']}}?size=m" alt="{{video['title']}}" />
                             </a>
                         </div>
@@ -98,7 +98,7 @@
                             </ul>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-7 excerpet">
-                            <h3><a href="{{video['video_url']}}" title="{{video['title']}}<" target="_blank">{{video['title']}}</a></h3>
+                            <h3><a href="{{video['video_url']}}" title="{{video['title']}}" target="_blank">{{video['title']}}</a></h3>
                             <p>{{video['description']}}</p>
                         </div>
                         <span class="clearfix"></span>
